[project]
name = "cyllama"
version = "0.1.15"
description = "A cython wrapper of llama.cpp"
readme = "README.md"
authors = [
    { name = "Shakeeb Alireza", email = "me@example.org" }
]
requires-python = ">=3.8"
dependencies = []


[build-system]
requires = ["setuptools >= 61", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.exclude-package-data]
"*" = ["*.pyx", "*.pxd", "*.pxi", "*.cpp", "*.c", "*.h", "*.hpp", "*.a", "*.lib"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: marks test as an integration test (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[dependency-groups]
dev = [
    "cython>=3.1.3",
    "setuptools>=75.3.2",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-memray>=1.8.0 ; sys_platform != 'win32'",
    "pytest-mock>=3.14.1",
    "auditwheel>=6.1.0 ; sys_platform == 'linux'",
    "delocate>=0.12.0 ; sys_platform == 'darwin'",
    "delvewheel>=1.10.0 ; sys_platform == 'win32'",
    "ruff>=0.12.12",
    "numpy>=1.24.4",
    "requests>=2.32.4",
    "langchain>=0.0.27",
    "twine>=6.1.0",
]

# -----------------------------------------------------------------------------
# cibuildwheel configuration for cross-platform wheel building
# -----------------------------------------------------------------------------

[tool.cibuildwheel]
# Build for Python 3.9+
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"

# Skip musllinux (Alpine) - not commonly needed
skip = "*-musllinux_*"

# Test the built wheels
test-requires = ["pytest"]
test-command = "pytest {project}/tests -x -q --ignore={project}/tests/examples"

# Build verbosity
build-verbosity = 1

[tool.cibuildwheel.linux]
# Use manylinux2014 for broader compatibility
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

# Install build dependencies before building
before-all = "yum install -y cmake ninja-build"

# Environment variables for Linux builds
environment = { GGML_METAL = "0" }

# Repair wheels with auditwheel
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
# Environment variables for macOS builds
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0", GGML_METAL = "1" }

# Repair wheels with delocate
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
# Environment variables for Windows builds
environment = { GGML_METAL = "0" }

# Repair wheels with delvewheel
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
