[project]
name = "cyllama"
version = "0.1.20"
description = "A cython wrapper of llama.cpp"
readme = "README.md"
authors = [
    { name = "Shakeeb Alireza", email = "me@example.org" }
]
requires-python = ">=3.9"
keywords = ["llama", "llm", "inference", "cython", "llama.cpp", "whisper.cpp", "stable-diffusion.cpp", "gguf", "ai", "machine-learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Cython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/shakfu/cyllama"
Repository = "https://github.com/shakfu/cyllama"
Issues = "https://github.com/shakfu/cyllama/issues"

[build-system]
requires = ["scikit-build-core", "cython", "cython-cmake"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.21"
cmake.build-type = "Release"
wheel.packages = ["src/cyllama"]
wheel.exclude = ["*.pyx", "*.pxd", "*.pxi", "*.cpp", "*.c", "*.h", "*.hpp", "*.a", "*.lib"]
wheel.license-files = ["LICENSE"]
build-dir = "build/{wheel_tag}"
sdist.include = [
    "thirdparty/llama.cpp/include",
    "thirdparty/llama.cpp/lib",
    "thirdparty/stable-diffusion.cpp/include",
    "thirdparty/stable-diffusion.cpp/lib",
    "thirdparty/whisper.cpp/include",
    "thirdparty/whisper.cpp/lib",
]
sdist.exclude = [
    "bin/",
    "build/",
    "dist/",
    ".git/",
    "*.egg-info/",
]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks test as an integration test (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[dependency-groups]
dev = [
    "cython>=3.1.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-memray>=1.8.0 ; sys_platform != 'win32'",
    "pytest-mock>=3.14.1",
    "auditwheel>=6.1.0 ; sys_platform == 'linux'",
    "delocate>=0.12.0 ; sys_platform == 'darwin'",
    "delvewheel>=1.10.0 ; sys_platform == 'win32'",
    "ruff>=0.12.12",
    "mypy>=1.13.0",
    "numpy>=1.24.4",
    "requests>=2.32.4",
    "langchain>=0.0.27",
    "twine>=6.1.0",
]
pdf = [
    "docling>=2.31.0",
]

# -----------------------------------------------------------------------------
# cibuildwheel configuration for cross-platform wheel building
# -----------------------------------------------------------------------------

[tool.cibuildwheel]
# Build for Python 3.9+
# build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
build = "cp310-* cp311-* cp312-* cp313-*"

# Skip musllinux (Alpine) - not commonly needed
skip = "*-musllinux_*"

# Test the built wheels
test-requires = ["pytest"]
test-command = "pytest {project}/tests -x -q --ignore={project}/tests/examples"

# Build verbosity
build-verbosity = 1

[tool.cibuildwheel.linux]
# Use manylinux2014 for broader compatibility
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

# Install build dependencies before building
before-all = "yum install -y cmake ninja-build"

# Environment variables for Linux builds
environment = { GGML_METAL = "0" }

# Repair wheels with auditwheel
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
# Environment variables for macOS builds
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0", GGML_METAL = "1" }

# Repair wheels with delocate
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
# Environment variables for Windows builds
environment = { GGML_METAL = "0" }

# Repair wheels with delvewheel
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
